--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android.extensions'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -14,6 +17,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
@@ -32,6 +38,7 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.5"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -40,4 +47,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    /*Stream.io SDK*/
+    implementation "io.getstream:stream-chat-android-ui-components:4.24.0"
+    implementation 'io.coil-kt:coil:1.4.0'
+
+    /*Timber*/
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    /*Navigation Component*/
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 }
